--- a/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
@@ -17,7 +17,9 @@
             <div class="card eventCard">
                 <div class="card-body">
                     <p>We're thrilled to announce the theme for the 2023 Doddington Village Sports & Carnival:</p>
-                    <p class="text-centre" style="font-size: 2em !important; font-weight: bolder !important">100 Years of Disney!</p>
+                    <p class="text-centre" style="font-size: 2em !important; font-weight: bolder !important">100 Years of</p>
+                    <p class="text-centre"><img src="/images/theme/disney.png" /></p>
+                    
                     <p>This year, we're celebrating a century of magic, imagination, and pure joy with all things Disney. </p>
                     <p>From classic characters like Mickey and Minnie Mouse to beloved princesses, superheroes, and beyond, there's something for everyone in the wonderful world of Disney. </p>
                     <p>We're calling on all members of the community to join us in embracing this theme and bringing their favorite Disney characters to life. Whether you're young or old, a die-hard fan or a casual admirer, we guarantee you'll have a blast at this year's carnival.</p>
