--- a/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <p>We're thrilled to announce the theme for the 2023 Doddington Village Sports & Carnival:</p>
                     <p class="text-centre" style="font-size: 2em !important; font-weight: bolder !important">100 Years of</p>
-                    <p class="text-centre"><img src="/images/theme/disney.png" /></p>
+                    <p class="text-centre"><img src="/images/theme/disney.png" alt="The Walt Disney logo." /></p>
                     
                     <p>This year, we're celebrating a century of magic, imagination, and pure joy with all things Disney. </p>
                     <p>From classic characters like Mickey and Minnie Mouse to beloved princesses, superheroes, and beyond, there's something for everyone in the wonderful world of Disney. </p>
