--- a/DoddingtonCarnival.Blazor/Pages/HomePage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/HomePage.razor
@@ -43,7 +43,7 @@
                 <div class="card feature">
                     <img src="images/features/sportsday.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Sports Day</h5>
+                        <h5 class="card-title">Sports Afternoon</h5>
                         <p class="card-text">Races for children of all ages with medals and trophies to win! Also bouncy castles, food and a whole lot more!</p>
                         <a href="sportsafternoon" class="w-100 btn btn-lg btn-primary">Find out more...</a>
                     </div>
