--- a/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
@@ -68,6 +68,8 @@
                 </div>
             </div>
 
+            <DoddingtonCarnival.Blazor.Shared.Sponsors._2023_CB3 /> 
+
             <div class="row">
                 <div class="col-6">
                     <div class="card eventCard">
