--- a/DoddingtonCarnival.Blazor/Pages/FeatureCarnival/CarnivalPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureCarnival/CarnivalPage.razor
@@ -106,33 +106,7 @@
                 </div>
             </div>
 
-            <div class="card eventCard">
-                <div class="card-header">
-                    Raffle Tickets
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-6">
-                            <p style="font-weight: bold">Raffle Tickets are on sale NOW!</p>
-                            <p>Get yours either on the day, or at <a href="https://www.facebook.com/thethreetunsdoddington" target="_blank">The Three Tuns</a>, Doddington, for your chance to win!</p>
-                            <p>
-                                Prizes are:
-                                <ul>
-                                    <li>1st Prize: £150</li>
-                                    <li>2nd Prize: £100</li>
-                                    <li>3rd Prize: £50</li>
-                                </ul>
-                            </p>
-                            <p>Tickets are £1 each.</p>
-                            <p><a href="/donations">All proceeds go to next year's Doddington Carnival.</a></p>
-                        </div>
-                        <div class="col-6">
-                            <img src="images/Pages/Carnival/RaffleTickets/TheThreeTuns.jpg" class="d-block mx-lg-auto img-fluid" alt="A book of raffle tickets, in front of several beer pumps at The Three Tuns, in Doddington." width="700" height="500" loading="lazy">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            <SharedRaffleTickets />
 
             <div class="card eventCard">
                 <div class="card-header">
