--- a/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
@@ -99,6 +99,8 @@
                 </div>
             </div>
 
+            <SharedRaffleTickets />
+
             @*<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
             <img src="images/Pages/SportsAfternoon/Races.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
