--- a/DoddingtonCarnival.Blazor/Pages/FeaturePrinceAndPrincess/PrinceAndPrincessPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeaturePrinceAndPrincess/PrinceAndPrincessPage.razor
@@ -67,26 +67,40 @@
                 </div>
             </div>
 
+            @*<div class="card eventCard">
+            <div class="card-header">
+            Picnic in the Park, including the Carnival Prince & Princess Selection
+            </div>
+            <div class="card-body">
+            <div class="row">
+            <div class="col-6">
+            <p>Come and join us to celebrate the King's Coronation, with an interlude to select the next Prince and Princess for the 2023!</p>
+            <p>Supported by Doddington Parish Council.</p>
+            <p>From 11:30 to 15:30</p>
+            <p>Bring your own picnic.</p>
+            <p>Ice cream van and Raffle.</p>
+            </div>
+            <div class="col-6">
+            <p class="eventHeading">Prince & Princess Application Form</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <a href="/pdfs/PrinceAndPrincess/2023 P&P Applcation Form.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>*@
+
             <div class="card eventCard">
                 <div class="card-header">
-                    Picnic in the Park, including the Carnival Prince & Princess Selection
+                    Introducing 2023's Carnival Prince & Princess
                 </div>
                 <div class="card-body">
-                    <div class="row">
-                        <div class="col-6">
-                            <p>Come and join us to celebrate the King's Coronation, with an interlude to select the next Prince and Princess for the 2023!</p>
-                            <p>Supported by Doddington Parish Council.</p>
-                            <p>From 11:30 to 15:30</p>
-                            <p>Bring your own picnic.</p>
-                            <p>Ice cream van and Raffle.</p>
-                        </div>
-                        <div class="col-6">
-                            <p class="eventHeading">Prince & Princess Application Form</p>
-                            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                                <a href="/pdfs/PrinceAndPrincess/2023 P&P Applcation Form.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
-                            </div>
-                        </div>
-                    </div>
+                    <p>
+                        <img src="images/pages/carnival/princeandprincess/princeandprincess2023 (1).jpg" />
+                    </p>
+                    <p style="text-align:center;">
+                        Luke &amp; Molly
+                    </p>
                 </div>
             </div>
 
@@ -108,28 +122,28 @@
                 </div>
             </div>
 
- 
-@*
+
+            @*
 
 
             <hr />
 
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Download Poster</h1>
-                    <p class="lead">Download the Picnic in the Park Poster (PDF) file.</p>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <a href="/pdfs/PrinceAndPrincess/2023 P&P Picnic.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
-                    </div>
-                </div>
-
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="/images/pages/princeandprincess/2023 p&p picnic.jpg" class="d-block mx-lg-auto img-fluid" alt="" height="250" loading="lazy">
-                </div>
+            <div class="col-lg-6">
+            <h1 class="display-5 fw-bold lh-1 mb-3">Download Poster</h1>
+            <p class="lead">Download the Picnic in the Park Poster (PDF) file.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <a href="/pdfs/PrinceAndPrincess/2023 P&P Picnic.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
             </div>
-*@
-           
-            
+            </div>
+
+            <div class="col-10 col-sm-8 col-lg-6">
+            <img src="/images/pages/princeandprincess/2023 p&p picnic.jpg" class="d-block mx-lg-auto img-fluid" alt="" height="250" loading="lazy">
+            </div>
+            </div>
+            *@
+
+
         </div>
     </div>
 </div>
