Fixed lots of mobile-based layout issues.

--- a/DoddingtonCarnival.Blazor/Pages/FeatureCarnival/CarnivalPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureCarnival/CarnivalPage.razor
@@ -72,7 +72,7 @@
             <DoddingtonCarnival.Blazor.Shared.Sponsors._2023_CB3 />
 
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Official Schedule
@@ -90,7 +90,7 @@
 
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Get Involved!
@@ -99,7 +99,7 @@
 
                             <p class="eventHeading">Have a Float in the Parade</p>
                             <p>Big floats and little floats are welcome!</p>
-                            <p>Drop us a quick email to saythat you're interested in a float, and we'll get in touch with how you get started and where to get the stuff from!</p>
+                            <p>Drop us a quick email to say that you're interested in a float, and we'll get in touch with how you get started and where to get the stuff from!</p>
                         </div>
 
                     </div>
@@ -114,16 +114,17 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/Carnival/Titles/Float.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>Float away in the parade procession through the village!</p>
                             <p>Bands, group floats, family floats and marching bands - there's something for everyone.</p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                                 <a href="/carnival/parade" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to the Parade</a>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <img src="images/Pages/Carnival/Titles/Float.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-                        </div>
+                       
                     </div>
                 </div>
             </div>
@@ -134,15 +135,15 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/Carnival/Titles/FancyDress.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>Get creative and get making a fancy dress as part of our competition!</p>
                             <p>See what you can make that fits into this year's theme to become the winner in your group.</p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                                 <a href="/carnival/fancydress" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to Fancy Dress</a>
                             </div>
-                        </div>
-                        <div class="col-6">
-                            <img src="images/Pages/Carnival/Titles/FancyDress.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -155,7 +156,10 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/Carnival/Titles/RoadClosed.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>
                                 To create a safe environment during the Carnival procession, a road closure is enforced. Residents of Doddington should be aware.
                             </p>
@@ -163,9 +167,7 @@
                                 <a href="/carnival/roadclosure" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to the Road Closure info</a>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <img src="images/Pages/Carnival/Titles/RoadClosed.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-                        </div>
+
                     </div>
                 </div>
             </div>
