--- a/DoddingtonCarnival.Blazor/Pages/FeaturePrinceAndPrincess/PrinceAndPrincessPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeaturePrinceAndPrincess/PrinceAndPrincessPage.razor
@@ -96,7 +96,7 @@
                 </div>
                 <div class="card-body">
                     <p>
-                        <img src="images/pages/carnival/princeandprincess/princeandprincess2023 (1).jpg" />
+                        <img src="images/pages/carnival/princeandprincess/princeandprincess2023 (1).jpg" style="width:100%" />
                     </p>
                     <p style="text-align:center;">
                         Luke &amp; Molly
@@ -110,14 +110,15 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/pages/Carnival/PrinceAndPrincess/PrinceAndPrincess2022 (2).jpg" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>A selection of photos of the former Princes and Princesses throughout the years!</p>
 
                             <a href="/princeandprincess/photos" class="btn btn-primary btn-block btn-lg px-4 me-md-2">See the photos</a>
                         </div>
-                        <div class="col-6">
-                            <img src="images/pages/Carnival/PrinceAndPrincess/PrinceAndPrincess2022 (2).jpg" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-                        </div>
+               
                     </div>
                 </div>
             </div>
