--- a/DoddingtonCarnival.Blazor/Pages/FeaturePubQuizzes/PubQuizzesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeaturePubQuizzes/PubQuizzesPage.razor
@@ -34,7 +34,7 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
                             <p class="eventHeading">At <a href="https://www.facebook.com/thethreetunsdoddington" target="_blank">The Three Tuns</a>, Doddington</p>
                             <p>
                                 <ul>
@@ -47,7 +47,7 @@
                             </p>
 
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
                             <p class="eventHeading">Download the Quiz Night Poster</p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                                 @*<a href="/pdfs/PubQuiz/2023 Pub Quiz Poster.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>*@
