--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunRoutes/SantaRunRoutesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunRoutes/SantaRunRoutesPage.razor
@@ -22,13 +22,13 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/pages/santarun/2022Route.JPG" style="width: 100%" />
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p class="lead">Download the routes (PDF) file.</p>
 
                             <a href="/pdfs/SantaRun/2022%20Santa%20Run%20Poster.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
-                        </div>
-                        <div class="col-6">
-                            <img src="images/pages/santarun/2022Route.JPG" style="width: 100%" />
                         </div>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-lg-4 col-12">
                             <p class="eventHeading">Friday</p>
 
                             <div>START at 6pm</div>
@@ -62,7 +62,7 @@
                                 <li>Manor Estate          </li>
                             </ul>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-4 col-12">
                             <p class="eventHeading">Saturday</p>
 
                             <div>START at 4:30pm</div>
@@ -111,7 +111,7 @@
                                 <li>Eastmoor Lane                   </li>
                             </ul>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-4 col-12">
                             <p class="eventHeading">Sunday</p>
 
                             <div>START at 4pm</div>
@@ -159,15 +159,15 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/SantaRun/Titles/SantaRun.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>Want to know where we are in the village with Santa Claus?</p>
                             <p>Find us on the map and see how far away we are from you!</p>
 
                             <a href="/santarun/tracker" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to the Santa Tracker</a>
-                        </div>
-                        <div class="col-6">
-                            <img src="images/Pages/SantaRun/Titles/SantaRun.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-                        </div>
+                        </div>                        
                     </div>
                 </div>
             </div>
