--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunTracker/SantaRunTrackerPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunTracker/SantaRunTrackerPage.razor
@@ -45,14 +45,14 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/SantaRun/Titles/SantaRunRoutes.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>Santa has kindly visiting Doddington for 3 evenings in December.</p>
                             <p>See which day that he's due to visit your road!</p>
 
                             <a href="/santarun/routes" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to the Santa Run Routes</a>
-                        </div>
-                        <div class="col-6">
-                            <img src="images/Pages/SantaRun/Titles/SantaRunRoutes.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
                         </div>
                     </div>
                 </div>
