--- a/DoddingtonCarnival.Blazor/Pages/FeatureScarecrows/ScarecrowsPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureScarecrows/ScarecrowsPage.razor
@@ -33,7 +33,7 @@
             </div>
 
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Official Schedule
@@ -49,7 +49,7 @@
 
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Entry Forms
@@ -72,14 +72,15 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/Scarecrows/Titles/PreviousEntries.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>Looking for inspiration? Or just checking out the previous entries?</p>
 
                             <a href="/scarecrows/previous" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Previous Entries</a>
                         </div>
-                        <div class="col-6">
-                            <img src="images/Pages/Scarecrows/Titles/PreviousEntries.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-                        </div>
+                        
                     </div>
                 </div>
             </div>
