--- a/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
@@ -71,7 +71,7 @@
             <DoddingtonCarnival.Blazor.Shared.Sponsors._2023_CB3 /> 
 
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Official Schedule
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Download Stall Form
