--- a/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureThemes/ThemesPage.razor
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <p>We're thrilled to announce the theme for the 2023 Doddington Village Sports & Carnival:</p>
                     <p class="text-centre" style="font-size: 2em !important; font-weight: bolder !important">100 Years of</p>
-                    <p class="text-centre"><img src="/images/theme/disney.png" alt="The Walt Disney logo." /></p>
+                    <p class="text-centre"><img src="/images/theme/disney.png" style="width: 100%" alt="The Walt Disney logo." /></p>
                     
                     <p>This year, we're celebrating a century of magic, imagination, and pure joy with all things Disney. </p>
                     <p>From classic characters like Mickey and Minnie Mouse to beloved princesses, superheroes, and beyond, there's something for everyone in the wonderful world of Disney. </p>
@@ -33,13 +33,13 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="/images/theme/2023 theme poster.jpg" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p class="lead">Download the 10 Years of Disney Poster (PDF) file.</p>
 
                             <a href="/pdfs/Theme/2023 theme poster.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
-                        </div>
-                        <div class="col-6">
-                            <img src="/images/theme/2023 theme poster.jpg" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
                         </div>
                     </div>
                 </div>
