--- a/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
+++ b/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
@@ -6876,12 +6876,7 @@ z" />
                     </div>
 
                     <div class="row carnivalFooter">
-                        <div class="col-8 col-lg-4 col-md-12 col-sm-12 mb-3">
-                           @* <h5 class="doddingtonTitle">Quick Links</h5>
-                            <ul class="nav flex-column">
-								<li class="nav-item mb-2"><a href="calendar/Meeting" class="nav-link p-0 text-muted">Come to a meeting</a></li>
-								<li class="nav-item mb-2"><a href="sportsafternoon" class="nav-link p-0 text-muted">2023 Stall Booking Form</a></li>
-                            </ul>*@
+                        <div class="col-lg-4 col-12 mb-3">
 
 							<h1 class="doddingtonTitle">Stay in the loop</h1>
                             <p>Whether you live in the Village of Doddington, Cambridgeshire, or just keeping in touch with what's going on, subscribe here today because...</p>
@@ -6897,7 +6892,7 @@ z" />
                             </p>
                         </div>
 
-                        <div class="col-lg-8 col-md-12 col-sm-12 mb-3">
+                        <div class="col-lg-8 col-12 mb-3">
                             <!-- Begin Mailchimp Signup Form -->
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
@@ -6947,7 +6942,7 @@ z" />
 					<hr />
 
 					<div class="row carnivalFooter">
-                        <div class="col-4 col-lg-4 col-md-12 col-sm-12 mb-3">
+                        <div class="col-lg-4 col-12 mb-3">
 							<h3>Site Links</h3>
 
 							<ul>
@@ -6963,7 +6958,7 @@ z" />
 								<li><a href="donations" class="p-0 text-muted">Donations</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-lg-4 col-md-12 col-sm-12 mb-3">
+						<div class="col-lg-4 col-12 mb-3">
 							<h3>Useful Information</h3>
 
 							<ul>
@@ -6972,7 +6967,7 @@ z" />
 								<li><a href="fancydress" class="p-0 text-muted">Enter the fancy dress</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-lg-4 col-md-12 col-sm-12 mb-3">
+						<div class="col-lg-4 col-12 mb-3">
 							<h3>Contact Details</h3>
 
 							<p>
