--- a/DoddingtonCarnival.Blazor/Shared/SharedRaffleTickets.razor
+++ b/DoddingtonCarnival.Blazor/Shared/SharedRaffleTickets.razor
@@ -4,7 +4,10 @@
     </div>
     <div class="card-body">
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6 col-12">
+                <img src="images/Pages/Carnival/RaffleTickets/TheThreeTuns.jpg" class="d-block mx-lg-auto img-fluid" alt="A book of raffle tickets, in front of several beer pumps at The Three Tuns, in Doddington." width="700" height="500" loading="lazy">
+            </div>
+            <div class="col-lg-6 col-12">
                 <p style="font-weight: bold">Raffle Tickets are on sale NOW!</p>
                 <p>Get yours either on the day, or at <a href="https://www.facebook.com/thethreetunsdoddington" target="_blank">The Three Tuns</a>, Doddington, for your chance to win!</p>
                 <p>
@@ -18,9 +21,7 @@
                 <p>Tickets are £1 each.</p>
                 <p><a href="/donations">All proceeds go to next year's Doddington Carnival.</a></p>
             </div>
-            <div class="col-6">
-                <img src="images/Pages/Carnival/RaffleTickets/TheThreeTuns.jpg" class="d-block mx-lg-auto img-fluid" alt="A book of raffle tickets, in front of several beer pumps at The Three Tuns, in Doddington." width="700" height="500" loading="lazy">
-            </div>
+           
         </div>
     </div>
 </div>
