--- a/DoddingtonCarnival.Blazor/Shared/Sponsors/2023_CB3.razor
+++ b/DoddingtonCarnival.Blazor/Shared/Sponsors/2023_CB3.razor
@@ -3,7 +3,7 @@
         <p class="eventHeading">2023 Sponsor: CB3 Consulting Ltd</p>
 
         <p>We would like to extend our heartfelt gratitude to CB3 Consulting Ltd for their generous support as the title sponsor of 2023's Doddington Village Sports & Carnival.</p>
-        <img src="images/pages/carnival/sponsors/cb3.png" />
+        <img src="images/pages/carnival/sponsors/cb3.png" style="width:100%" />
 
         <p style="font-style: italic;">"Our aim is to create a business which is renowned within the industry for providing innovative cost management services as well as being the ‘go to’ employer. We aim to be a company our employees will be proud to work for who in turn will be ambassadors for our brand in everything they do."</p>
 
