--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
@@ -30,7 +30,7 @@
 
 
             <div class="row">
-                <div class="col-6">
+                <di<div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Santa's Schedule
@@ -43,7 +43,7 @@
 
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Download the Santa Run Poster
@@ -62,14 +62,14 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/SantaRun/Titles/SantaRun.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>Want to know where we are in the village with Santa Claus?</p>
                             <p>Find us on the map and see how far away we are from you!</p>
 
                             <a href="/santarun/tracker" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to the Santa Tracker</a>
-                        </div>
-                        <div class="col-6">
-                            <img src="images/Pages/SantaRun/Titles/SantaRun.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -81,24 +81,18 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-12">
+                            <img src="images/Pages/SantaRun/Titles/SantaRunRoutes.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                        </div>
+                        <div class="col-lg-6 col-12">
                             <p>Santa has kindly visiting Doddington for 3 evenings in December.</p>
                             <p>See which day that he's due to visit your road!</p>
 
                             <a href="/santarun/routes" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to the Santa Run Routes</a>
                         </div>
-                        <div class="col-6">
-                            <img src="images/Pages/SantaRun/Titles/SantaRunRoutes.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-                        </div>
                     </div>
                 </div>
             </div>
-
-             
-
-             
-
-            
         </div>
     </div>
 </div>
