--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
@@ -30,7 +30,7 @@
 
 
             <div class="row">
-                <di<div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12">
                     <div class="card eventCard">
                         <div class="card-header">
                             Santa's Schedule
