Added 2023's scarecrow map.

--- a/DoddingtonCarnival.Blazor/Pages/FeatureScarecrows/ScarecrowsPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureScarecrows/ScarecrowsPage.razor
@@ -68,6 +68,17 @@
 
             <div class="card eventCard">
                 <div class="card-header">
+                    Map
+                </div>
+                <div class="card-body">
+
+                    <img src="images/Pages/Scarecrows/2023-MapTrail.jpg" class="d-block mx-lg-auto img-fluid" alt="" width="100%" loading="lazy">
+                     
+                </div>
+            </div>
+
+            <div class="card eventCard">
+                <div class="card-header">
                     Previous Entries
                 </div>
                 <div class="card-body">
