--- a/DoddingtonCarnival.Blazor/Pages/FeatureCalendar/CalendarPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureCalendar/CalendarPage.razor
@@ -26,7 +26,7 @@
         }
 
         <header>
-            <h1>All Diary Dates</h1>
+            <h1>All Diary Dates!</h1>
         </header>
 
         <div class="centercontent">
