--- a/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
@@ -197,7 +197,7 @@
 
         if (sportsDay != null)
         {
-            NextSportsDay = sportsDay.Start;
+            NextSportsDay = sportsDay.StartDateTime;
         }
     }
 }
