--- a/DoddingtonCarnival.Blazor/Shared/SharedNextEvent.razor
+++ b/DoddingtonCarnival.Blazor/Shared/SharedNextEvent.razor
@@ -5,7 +5,7 @@
 
 @if (nextEvent != null)
 {
-    <p>The next @nextEvent.Title is on the @nextEvent.Start.ToLongDateString()!</p>
+    <p>The next @nextEvent.Title is on the @nextEvent.StartDateTime.ToLongDateString()!</p>
 }
 
 @code {
